[package]
name = "fdbbench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundationdb = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1"
structopt = "0.3"
futures = "0.3"
rand = "0.8"
